--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,13 +1,24 @@
 body {
     color: #333;
-    text-align: left;
-    font-family: Raleway;
-    font-size: 10px;
+    text-align: center;
+    font-family: Arial;
+    font-size: 16px;
+    margin: 0;
+    padding: 0;
+}
+
+#cabecera {
+    background: black;
+    box-shadow: 0px 5px 30px 0px rgba(0, 0, 0, 0.75);
+    color: white;
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5em;
 }
 
 #container {
     width: 70%;
-    padding: 1em;
+    padding: 0;
     text-align: left;
     border: 1px solid #ddd;
     margin: 0 auto;
@@ -15,4 +26,8 @@ body {
 
 #container h1 {
     font-size: 20px;
+}
+
+#post {
+    padding: 1em;
 }
